--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,12 +18,46 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
+          <td>
+            <% if @book.favorited_by?(current_user) %>
+              <p>
+                <%= link_to book_favorites_path(@book), method: :delete do %>
+                  ♥<%= @book.favorites.count %>
+                <% end %>
+              </p>
+            <% else %>
+              <p>
+                <%= link_to book_favorites_path(@book), method: :post do %>
+                  ♡<%= @book.favorites.count %>
+                <% end %>
+              </p>
+            <% end %>
+          </td>
+          <td>コメント数：<%= @book.book_comments.count %></td>
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
         </tr>
       </table>
+      <div>
+        <% @book.book_comments.each do |book_comment| %>
+          <p>
+            <%= image_tag @book.user.get_profile_image, size:"100x100" %>
+            <%= book_comment.comment %>
+            <%= link_to 'Destroy', book_book_comments_path(@book), method: :delete, class: "btn btn-sm btn-danger" %>
+          </p>
+          <%= link_to(@book.user) do %>
+            <%= book_comment.user.name %>
+          <% end %>
+        <% end %>
+      </div>
+      <div>
+        <%= form_with model: [@book, @book_comment] do |f| %>
+          <%= f.text_area :comment %>
+          <p><%= f.submit "送信" %></p>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
