--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -11,6 +11,15 @@
       <tr>
         <td><%= image_tag user.get_profile_image, size: '50x50' %></td>
         <td><%= user.name %></td>
+        <td>フォロー<%= user.followers.count %></td>
+        <td>フォロワー<%= user.followeds.count %></td>
+        <% if current_user != user %>
+          <% if current_user.following?(user) %>
+            <td><%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn btn-danger" %></td>
+          <% else %>
+            <td><%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-success" %></td>
+          <% end %>
+        <% end %>
         <td><%= link_to 'Show', user %></td>
       </tr>
     <% end %>
