--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,5 +16,6 @@
       </main>
     <%= yield %>
     <%= render 'layouts/footer' %>
+    <script src="jquery.min.js"></script>
   </body>
 </html>
