--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -16,6 +16,7 @@
           <td><%= user.name %></td>
           <td>フォロー数: <%= user.followers.count %></td>
           <td>フォロワー数: <%= user.followers.count %></td>
+          <td><%= link_to 'Show', user_path(user) %></td>
         </tr>
       </tbody>
     </table>
