--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,22 @@
     <div class='col-md-3'>
       <h2>User info</h2>
       <%= render 'info', user: @user %>
+      <span>
+        <% unless @user.id == current_user.id %>
+          <% if (current_user.following? @user) && (@user.following? current_user) %>
+          <% if @isRoom == true %>
+            <p><a href="/rooms/<%= @roomId %>">chatへ</a></p>
+          <% else %>
+            <%= form_for @room do |f| %>
+              <%= fields_for @entry do |e| %>
+                <%= e.hidden_field :user_id, value: @user.id %>
+              <% end %>
+              <%= f.submit "chatを始める" %>
+            <% end %>
+          <% end %>
+          <% end %>
+        <% end %>
+      </span>
       <h2 class="mt-3">New book</h2>
       <%= render 'books/form', book: @book %>
     </div>
