--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -18,6 +18,7 @@
         <td><%= book.body %></td>
         <td class="favorite-btn<%= book.id %>"><%= render 'favorites/favorite-btn', book: book %></td>
         <td>コメント数：<%= book.book_comments.count %></td>
+        <td>閲覧数: <%= book.view_counts.count %></td>
       </tr>
     <% end %>
   </tbody>
