--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -22,6 +22,7 @@
             <%= render 'favorites/favorite-btn', book: @book %>
           </td>
           <td class="counts"><%= render 'book_comments/comments-count', book: @book %></td>
+          <td>閲覧数: <%= @book.view_counts.count %></td>
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
