--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,6 +26,43 @@
     <div class='col-md-8 offset-md-1'>
       <h2>Books</h2>
       <%= render 'books/index',books: @books %>
+      <h2>投稿数の前日比・前週比</h2>
+      <table class='table table-bordered'>
+        <thead>
+          <tr>
+            <th>今日の投稿数</th>
+            <th>前日の投稿数</th>
+            <th>前日比</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><%= @today_books.count %></td>
+            <td><%= @yesterday_books.count %></td>
+            <td>
+              <%= ((@today_books.count.to_f / @yesterday_books.count) * 100).round %>%
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th>今週の投稿数</th>
+            <th>前週の投稿数</th>
+            <th>前週比</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><%= @this_week_books.count %></td>
+            <td><%= @last_week_books.count %></td>
+            <td>
+              <%= ((@this_week_books.count.to_f / @last_week_books.count) * 100).round %>%
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
