--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,43 +26,65 @@
     <div class='col-md-8 offset-md-1'>
       <h2>Books</h2>
       <%= render 'books/index',books: @books %>
-      <h2>投稿数の前日比・前週比</h2>
-      <table class='table table-bordered'>
-        <thead>
-          <tr>
-            <th>今日の投稿数</th>
-            <th>前日の投稿数</th>
-            <th>前日比</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td><%= @today_books.count %></td>
-            <td><%= @yesterday_books.count %></td>
-            <td>
-              <%= ((@today_books.count.to_f / @yesterday_books.count) * 100).round %>%
-            </td>
-          </tr>
-        </tbody>
-      </table>
-      <table class="table table-bordered">
-        <thead>
-          <tr>
-            <th>今週の投稿数</th>
-            <th>前週の投稿数</th>
-            <th>前週比</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td><%= @this_week_books.count %></td>
-            <td><%= @last_week_books.count %></td>
-            <td>
-              <%= ((@this_week_books.count.to_f / @last_week_books.count) * 100).round %>%
-            </td>
-          </tr>
-        </tbody>
-      </table>
+      <h2>7日間分の投稿数</h2>
+        <table class='table table-bordered'>
+          <thead>
+            <tr>
+              <td>6日前</td>
+              <td>5日前</td>
+              <td>4日前</td>
+              <td>3日前</td>
+              <td>2日前</td>
+              <td>1日前</td>
+              <td>今日</td>
+            </tr>
+          </thead>
+          <tbody>
+            <td><%= @books.created_six_days_ago.count %></td>
+            <td><%= @books.created_five_days_ago.count %></td>
+            <td><%= @books.created_four_days_ago.count %></td>
+            <td><%= @books.created_three_days_ago.count %></td>
+            <td><%= @books.created_two_days_ago.count %></td>
+            <td><%= @books.created_yesterday.count %></td>
+            <td><%= @books.created_today.count %></td>
+          </tbody>
+        </table>
+        <div>
+          <canvas id="myChart"></canvas>
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+          <script>
+            $(document).on('turbolinks:load', function() {
+            const ctx = document.getElementById("myChart");
+            new Chart(ctx, {
+              type: 'line',
+              data: {
+                labels: ['6日前', '5日前', '4日前', '3日前', '2日前', '1日前', '今日'],
+                datasets: [{
+                    label: '投稿した本の数',
+                    data: [<%= @books.created_six_days_ago.count %>, <%= @books.created_five_days_ago.count %>, <%= @books.created_four_days_ago.count %>, <%= @books.created_three_days_ago.count %>, <%= @books.created_two_days_ago.count %>, <%= @books.created_yesterday.count %>, <%= @books.created_today.count%>],
+                    borderColor: "rgba(0,0,255,1)",
+                    backgroundColor: "rgba(0,0,0,0)",
+                    lineTension: 0.3
+                }],
+              },
+              options: {
+                title: {
+                  display: true,
+                  text: '7日間の投稿数の比較'
+                },
+                scales: {
+                  y: {
+                      suggestedMax: 10,
+                      suggestedMin: 0,
+                      stepSize: 1,
+                  }
+                },
+              }
+            });
+            });
+          </script>
+      </div>
     </div>
   </div>
 </div>
