--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,65 +26,16 @@
     <div class='col-md-8 offset-md-1'>
       <h2>Books</h2>
       <%= render 'books/index',books: @books %>
-      <h2>7日間分の投稿数</h2>
-        <table class='table table-bordered'>
-          <thead>
-            <tr>
-              <td>6日前</td>
-              <td>5日前</td>
-              <td>4日前</td>
-              <td>3日前</td>
-              <td>2日前</td>
-              <td>1日前</td>
-              <td>今日</td>
-            </tr>
-          </thead>
-          <tbody>
-            <td><%= @books.created_six_days_ago.count %></td>
-            <td><%= @books.created_five_days_ago.count %></td>
-            <td><%= @books.created_four_days_ago.count %></td>
-            <td><%= @books.created_three_days_ago.count %></td>
-            <td><%= @books.created_two_days_ago.count %></td>
-            <td><%= @books.created_yesterday.count %></td>
-            <td><%= @books.created_today.count %></td>
-          </tbody>
-        </table>
-        <div>
-          <canvas id="myChart"></canvas>
-        </div>
-        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-          <script>
-            $(document).on('turbolinks:load', function() {
-            const ctx = document.getElementById("myChart");
-            new Chart(ctx, {
-              type: 'line',
-              data: {
-                labels: ['6日前', '5日前', '4日前', '3日前', '2日前', '1日前', '今日'],
-                datasets: [{
-                    label: '投稿した本の数',
-                    data: [<%= @books.created_six_days_ago.count %>, <%= @books.created_five_days_ago.count %>, <%= @books.created_four_days_ago.count %>, <%= @books.created_three_days_ago.count %>, <%= @books.created_two_days_ago.count %>, <%= @books.created_yesterday.count %>, <%= @books.created_today.count%>],
-                    borderColor: "rgba(0,0,255,1)",
-                    backgroundColor: "rgba(0,0,0,0)",
-                    lineTension: 0.3
-                }],
-              },
-              options: {
-                title: {
-                  display: true,
-                  text: '7日間の投稿数の比較'
-                },
-                scales: {
-                  y: {
-                      suggestedMax: 10,
-                      suggestedMin: 0,
-                      stepSize: 1,
-                  }
-                },
-              }
-            });
-            });
-          </script>
+      <%= form_with url: user_search_path(@user), method: :get, local: false do |f| %>
+        <%= f.date_field :created_at %>
+        <%= f.submit '検索', class: 'btn btn-primary' %>
+      <% end %>
+      <div id="search_result">
+        <% if @search_book.present? %>
+          <%= render 'search', search_book: @search_book %>
+        <% end %>
       </div>
+    </div>
     </div>
   </div>
 </div>
