--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -7,7 +7,22 @@
     <%= f.label :opinion %>
     <%= f.text_area :body, class: 'form-control book_body' %>
   </div>
+  <div id="post_raty">
+    <%= f.label :score, 'Rate' %>
+  </div>
   <div class="form-group">
     <%= f.submit class: 'btn btn-success' %>
   </div>
 <% end %>
+
+  <script>
+    let elem = document.querySelector('#post_raty');
+    let opt = {
+      starOff: '<%= asset_path('star-off.png') %>',
+      starOn: '<%= asset_path('star-on.png') %>',
+      starHalf: '<%= asset_path('star-half.png') %>',
+      scoreName: 'book[score]',
+      half: true
+    };
+    raty(elem,opt)
+  </script>
