--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,7 +5,7 @@
       <h2>User info</h2>
       <%= render 'users/info', user: @user %>
       <h2 class="mt-3">New book</h2>
-      <%= render 'form', book: @newbook %>
+      <%= render 'form', book: @newbook, isEdit: false %>
     </div>
     <div class='col-md-8 offset-md-1'>
   		<h2>Book detail</h2>
@@ -23,7 +23,7 @@
           </td>
           <td class="counts"><%= render 'book_comments/comments-count', book: @book %></td>
           <td>閲覧数: <%= @book.view_counts.count %></td>
-          <td id="star-comf-<%= @book.id %>"><%= @book.score %></td>
+          <td><%= render "static.rate", book: @book %></td>
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
@@ -43,14 +43,4 @@
   </div>
 </div>
 
-<script>
-  $('#star-comf-<%= @book.id %>').empty();
-  $('#star-comf-<%= @book.id %>').raty({
-    starOff: '<%= asset_path('star-off.png') %>',
-    starOn: '<%= asset_path('star-on.png') %>',
-    starHalf: '<%= asset_path('star-half.png') %>',
-    half: true,
-    readOnly: true,
-    score: <%= @book.score %>
-  });
-</script>
+
