--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
     <div class='col-md-3'>
 
       <h2>User info</h2>
-      <%= render 'info', user: current_user %>
+      <%= render 'info', user: current_user, isEdit: false %>
 
       <h2 class="mt-3">New book</h2>
       <%= render 'books/form', book: @book %>
