--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
   <div class='row'>
     <div class='col-md-3'>
       <h2>User info</h2>
-      <%= render 'info', user: @user %>
+      <%= render 'info', user: @user, isEdit: false %>
       <span>
         <% unless @user.id == current_user.id %>
           <% if (current_user.following? @user) && (@user.following? current_user) %>
