--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -7,7 +7,9 @@
     <%= f.label :opinion %>
     <%= f.text_area :body, class: 'form-control book_body' %>
   </div>
-    
+  <div class="form-group">
+    <%= f.label :tag, 'Tag' %>
+    <%= f.text_field :tag %>
   </div>
   <% if book.id.nil? %>
     <div class="form-group" id="star">
