--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -4,6 +4,9 @@
       <th></th>
       <th>Title</th>
       <th>Opinion</th>
+      <th>Tag</th>
+      <th colspan="3"></th>
+      <th colspan="3"></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +19,7 @@
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
+        <td><%= link_to book.tag, tagsearches_search_path(tag: book.tag) %></td>
         <td class="favorite-btn<%= book.id %>"><%= render 'favorites/favorite-btn', book: book %></td>
         <td>コメント数：<%= book.book_comments.count %></td>
         <td>閲覧数: <%= book.view_counts.count %></td>
