--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -16,8 +16,9 @@
             <%= @book.user.name %>
             <% end %>
           </td>
-          <td><%= link_to @book.title, @book %></td>
+          <td><%= link_to @book.title, books_path(@book) %></td>
           <td><%= @book.body %></td>
+          <td><%= link_to @book.tag, tagsearches_search_path(tag: @book.tag) %></td>
           <td class="favorite-btn">
             <%= render 'favorites/favorite-btn', book: @book %>
           </td>
