--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -56,16 +56,22 @@
   </nav>
   <div class="container">
     <div class="row">
-      <div class="mx-auto">
-        <% if user_signed_in? %>
-          <%= form_with url: search_path, local: true, method: :get do |f| %>
-            <%= f.text_field :word %>
-            <%= f.select :range, options_for_select([['User'], ['Book']]) %>
-            <%= f.select :search, options_for_select([["完全一致","perfect_match"], ["前方一致", "forward_match"], ["後方一致", "backward_match"], ["部分一致", "partical_match"]]) %>
-            <%= f.submit "検索" %>
-          <% end %>
+    <% if user_signed_in? %>
+      <div class="col-5">
+        <%= form_with url: search_path, local: true, method: :get do |f| %>
+          <%= f.text_field :word %>
+          <%= f.select :range, options_for_select([['User'], ['Book']]) %>
+          <%= f.select :search, options_for_select([["完全一致","perfect_match"], ["前方一致", "forward_match"], ["後方一致", "backward_match"], ["部分一致", "partical_match"]]) %>
+          <%= f.submit "検索" %>
         <% end %>
       </div>
+      <div class="col-5">
+        <%= form_with url: tagsearches_search_path, local: true, method: :get do |f| %>
+          <%= f.text_field :word %>
+          <%= f.submit "タグ検索" %>
+        <% end %>
+      </div>
+    <% end %>
     </div>
   </div>
 </header>
